# cama-mm

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  bot.py  config.py  database.py  docker-compose.yml  opendota_integration.py  prompts.md  pyproject.toml  rating_system.py  shuffler.py  steam_api.py
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml
commands/: admin.py  advstats.py  betting.py  checks.py  dig.py  dota_info.py  draft.py  enrichment.py  info.py  lobby.py  mana.py  match.py  predictions.py  profile.py  rating_analysis.py  registration.py  reminders.py  roll.py  russianroulette.py  scout.py  shop.py  trivia.py  wrapped.py
commands/profile_helpers/: __init__.py  economy.py
docs/: mango-implementation.md  ratings-insights.md
domain/models/: boss_mechanics.py  boss_stingers.py  dig_gear.py  mana_effects.py  player.py
domain/services/: draft_service.py  team_balancing_service.py
infrastructure/: schema_manager.py  service_container.py
repositories/: bankruptcy_repository.py  base_repository.py  bet_repository.py  dig_repository.py  disburse_repository.py  guild_config_repository.py  interfaces.py  loan_repository.py  lobby_repository.py  mana_repository.py  match_repository.py  notification_repository.py  pairings_repository.py  player_repository.py  prediction_repository.py  rebellion_repository.py  tip_repository.py  wrapped_repository.py
services/: __init__.py  ai_service.py  balance_history_service.py  balance_validation.py  bankruptcy_service.py  betting_service.py  dig_constants.py  dig_dm_context.py  dig_flavor_service.py  dig_flavor_validator.py  dig_llm_prompts.py  dig_llm_service.py  dig_npcs.py  dig_service.py  disburse_service.py  draft_state_manager.py  flavor_text_service.py  gambling_stats_service.py  garnishment_service.py  interfaces.py  loan_service.py  lobby_manager_service.py  lobby_service.py  mana_effects_service.py  mana_service.py  match_discovery_service.py  match_enrichment_service.py  match_service.py  match_state_service.py  neon_degen_service.py  opendota_player_service.py  player_service.py  prediction_service.py  rebellion_service.py  recalibration_service.py  reminder_service.py  result.py  sql_query_service.py  trivia_data.py  trivia_image_cache.py  (+2 more)
tests/: conftest.py  test_addfake_command.py  test_admin_bumprd.py  test_admin_setinitialrating.py  test_ai_services.py  test_all_commands_guild_id.py  test_architecture_constraints.py  test_atomic_operations.py  test_balance_history_service.py  test_balance_validation.py  test_bankruptcy.py  test_bankruptcy_display.py  test_betting_commands.py  test_betting_impact.py  test_betting_integration_repo.py  test_betting_service.py  test_boss_duel.py  test_boss_multi_tier.py  test_bot_init.py  test_bugfix_regressions.py  test_checks.py  test_concurrent_matches.py  test_conditional_player_shuffle.py  test_database.py  test_dedicated_lobby_channel.py  test_dig_assets.py  test_dig_boss_echo.py  test_dig_boss_revamp.py  test_dig_bosses.py  test_dig_channel_check.py  test_dig_flavor_service.py  test_dig_gear.py  test_dig_gear_service.py  test_dig_llm_service.py  test_dig_migrations.py  test_dig_perks.py  test_dig_pinnacle.py  test_dig_service.py  test_dig_splash_narration.py  test_disburse_service.py  (+109 more)
utils/: command_helpers.py  dig_assets.py  dig_drawing.py  drawing.py  embeds.py  formatting.py  hero_lookup.py  heroes.json  interaction_safety.py  mana_display.py  neon_drawing.py  neon_helpers.py  neon_terminal.py  rating_insights.py  streaming.py  wheel_drawing.py  wrapped_drawing.py
utils/drawing/: __init__.py  _common.py  balance_history.py  gamba.py  predictions.py
