[project]
name = "cama-mm"
version = "0.1.0"
description = "Discord bot for balanced team shuffling in Dota 2 inhouse games"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "discord-py>=2.3.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "glicko2>=0.0.5",
    "dotabase>=7.8.0",
    "sqlalchemy-utils>=0.41.0",
    "pillow>=10.0.0",
    "litellm==1.80.13",
    "matplotlib>=3.8.0",
    "scipy>=1.11.0",
    "openskill>=6.0.0",
    "pilmoji>=2.0.5",
]

[dependency-groups]
dev = [
    "pytest-xdist>=3.8.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.1.0",
    "pytest-rerunfailures>=14.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests", "."]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
# Group tests by module/class to share session-scoped fixtures efficiently
# Limit workers to 8 to avoid Python 3.14.2 interpreter crashes under heavy parallel load
# Retry failed tests once to handle Python 3.14 parallel execution flakiness
addopts = "--dist=loadscope -n 8 --reruns 1 --reruns-delay 0.5"
markers = [
    "timeout: mark test with a timeout",
    "forceserial: mark test to run in isolation (avoid parallel test state pollution)",
]
filterwarnings = [
    "ignore:'asyncio\\.iscoroutinefunction' is deprecated:DeprecationWarning:discord\\..*",
    "ignore:coroutine.*AsyncMockMixin._execute_mock_call.*was never awaited:RuntimeWarning",
    "ignore:'audioop' is deprecated:DeprecationWarning:discord\\.player",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "W",      # pycodestyle warnings
    "I",      # isort
    "UP",     # pyupgrade (modern Python)
    "B",      # bugbear (common bugs)
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (formatter handles this)
    "B008",   # function call in default arg (common in FastAPI/discord.py)
    "SIM108", # ternary instead of if-else (readability)
    "SIM105", # contextlib.suppress instead of try-except-pass (less readable)
    "B905",   # zip() without strict= (pedantic)
    "E402",   # import not at top (sometimes intentional)
    "B007",   # unused loop control variable (often intentional)
    "B024",   # abstract base class without abstract methods (marker class)
    "SIM115", # context manager for open (not always applicable)
    "SIM117", # nested with statements (sometimes clearer)
    "SIM118", # in dict.keys() - sqlite3.Row doesn't support .get()
]
